external-crates/move/crates/move-compiler/tests/move_check/typing/loop_body_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/loop_body_invalid.move:3:14
  │
3 │         loop 0u64
  │              ^^^^
  │              │
  │              Invalid loop body
  │              Expected: '()'
  │              Given: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/loop_body_invalid.move:7:14
  │
7 │         loop false
  │              ^^^^^
  │              │
  │              Invalid loop body
  │              Expected: '()'
  │              Given: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_body_invalid.move:11:14
   │
11 │         loop { @0x0 }
   │              ^^^^^^^^
   │              │ │
   │              │ Given: 'address'
   │              Invalid loop body
   │              Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_body_invalid.move:15:14
   │
15 │         loop { let x = 0u64; x }
   │              ^^^^^^^^^^^^^^^^^^^
   │              │         │
   │              │         Given: 'u64'
   │              Invalid loop body
   │              Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_body_invalid.move:19:14
   │
19 │         loop { if (true) 1 else 0u64 }
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^
   │              │                  │
   │              │                  Given: 'u64'
   │              Invalid loop body
   │              Expected: '()'
